--- a/Week3/Quang/BaiThucHanhTuan3.ipynb
+++ b/Week3/Quang/BaiThucHanhTuan3.ipynb
@@ -905,7 +905,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([179600.55, 179598.55, 179600.55, ..., 179600.55, 179600.55,\n       179600.55])"
+      "text/plain": "array([179600.65, 179598.65, 179600.65, ..., 179600.65, 179600.65,\n       179600.65])"
      },
      "metadata": {},
      "execution_count": 51
@@ -914,7 +914,7 @@
    "source": [
     "from sklearn.svm import SVR\n",
     "\n",
-    "svm_reg = SVR(C = 1.0, epsilon = 0.2)\n",
+    "svm_reg = SVR(C = 1.0, epsilon = 0.1)\n",
     "svm_reg.fit(train_X, train_Y)\n",
     "predict_train_X = svm_reg.predict(train_X)\n",
     "predict_train_X"
@@ -936,6 +936,173 @@
    ],
    "source": [
     "train_Y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_reg = SVR(kernel = 'rbf', C = 1.0, epsilon = 0.1)\n",
+    ""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model_1 = svm_reg.fit(train_X[features_list_1].values.reshape(-1, 1), train_Y)\n",
+    "\n",
+    "rmse_train_1 = math.sqrt(mean_squared_error(train_Y, svm_model_1.predict(train_X[features_list_1])))\n",
+    "\n",
+    "rmse_test_1 = math.sqrt(mean_squared_error(test_Y, svm_model_1.predict(test_X[features_list_1])))\n",
+    "\n",
+    "rmse_dev_1 = math.sqrt(mean_squared_error(dev_Y, svm_model_1.predict(dev_X[features_list_1])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model_2 = svm_reg.fit(train_X[features_list_2].values.reshape(-1, 2), train_Y)\n",
+    "\n",
+    "rmse_train_2 = math.sqrt(mean_squared_error(train_Y, svm_model_2.predict(train_X[features_list_2])))\n",
+    "\n",
+    "rmse_test_2 = math.sqrt(mean_squared_error(test_Y, svm_model_2.predict(test_X[features_list_2])))\n",
+    "\n",
+    "rmse_dev_2 = math.sqrt(mean_squared_error(dev_Y, svm_model_2.predict(dev_X[features_list_2])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model_3 = svm_reg.fit(train_X[features_list_3].values.reshape(-1, 3), train_Y)\n",
+    "\n",
+    "rmse_train_3 = math.sqrt(mean_squared_error(train_Y, svm_model_3.predict(train_X[features_list_3])))\n",
+    "\n",
+    "rmse_test_3 = math.sqrt(mean_squared_error(test_Y, svm_model_3.predict(test_X[features_list_3])))\n",
+    "\n",
+    "rmse_dev_3 = math.sqrt(mean_squared_error(dev_Y, svm_model_3.predict(dev_X[features_list_3])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model_4 = svm_reg.fit(train_X[features_list_4].values.reshape(-1, 4), train_Y)\n",
+    "\n",
+    "rmse_train_4 = math.sqrt(mean_squared_error(train_Y, svm_model_4.predict(train_X[features_list_4])))\n",
+    "\n",
+    "rmse_test_4 = math.sqrt(mean_squared_error(test_Y, svm_model_4.predict(test_X[features_list_4])))\n",
+    "\n",
+    "rmse_dev_4 = math.sqrt(mean_squared_error(dev_Y, svm_model_4.predict(dev_X[features_list_4])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model_5 = svm_reg.fit(train_X[features_list_5].values.reshape(-1, 5), train_Y)\n",
+    "\n",
+    "rmse_train_5 = math.sqrt(mean_squared_error(train_Y, svm_model_5.predict(train_X[features_list_5])))\n",
+    "\n",
+    "rmse_test_5 = math.sqrt(mean_squared_error(test_Y, svm_model_5.predict(test_X[features_list_5])))\n",
+    "\n",
+    "rmse_dev_5 = math.sqrt(mean_squared_error(dev_Y, svm_model_5.predict(dev_X[features_list_5])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model_6 = svm_reg.fit(train_X[features_list_6].values.reshape(-1, 6), train_Y)\n",
+    "\n",
+    "rmse_train_6 = math.sqrt(mean_squared_error(train_Y, svm_model_6.predict(train_X[features_list_6])))\n",
+    "\n",
+    "rmse_test_6 = math.sqrt(mean_squared_error(test_Y, svm_model_6.predict(test_X[features_list_6])))\n",
+    "\n",
+    "rmse_dev_6 = math.sqrt(mean_squared_error(dev_Y, svm_model_6.predict(dev_X[features_list_6])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model_7 = svm_reg.fit(train_X[features_list_7].values.reshape(-1, 7), train_Y)\n",
+    "\n",
+    "rmse_train_7 = math.sqrt(mean_squared_error(train_Y, svm_model_7.predict(train_X[features_list_7])))\n",
+    "\n",
+    "rmse_test_7 = math.sqrt(mean_squared_error(test_Y, svm_model_7.predict(test_X[features_list_7])))\n",
+    "\n",
+    "rmse_dev_7 = math.sqrt(mean_squared_error(dev_Y, svm_model_7.predict(dev_X[features_list_7])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model_8 = svm_reg.fit(train_X[features_list_8].values.reshape(-1, 8), train_Y)\n",
+    "\n",
+    "rmse_train_8 = math.sqrt(mean_squared_error(train_Y, svm_model_8.predict(train_X[features_list_8])))\n",
+    "\n",
+    "rmse_test_8 = math.sqrt(mean_squared_error(test_Y, svm_model_8.predict(test_X[features_list_8])))\n",
+    "\n",
+    "rmse_dev_8 = math.sqrt(mean_squared_error(dev_Y, svm_model_8.predict(dev_X[features_list_8])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm_model_9 = svm_reg.fit(train_X[features_list_9].values.reshape(-1, 9), train_Y)\n",
+    "\n",
+    "rmse_train_9 = math.sqrt(mean_squared_error(train_Y, svm_model_9.predict(train_X[features_list_9])))\n",
+    "\n",
+    "rmse_test_9 = math.sqrt(mean_squared_error(test_Y, svm_model_9.predict(test_X[features_list_9])))\n",
+    "\n",
+    "rmse_dev_9 = math.sqrt(mean_squared_error(dev_Y, svm_model_9.predict(dev_X[features_list_9])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "                                                    RMSE_Train    RMSE_Dev  \\\nlongitude                                           117877.183  117493.850   \nlongitude + latitude                                117807.608  117425.087   \nlongitude + latitude + housing_median_age           118043.892  117669.980   \nlongitude + latitude + housing_median_age + tot...  118075.070  117699.874   \nlongitude + latitude + housing_median_age + tot...  118075.160  117699.967   \nlongitude + latitude + housing_median_age + tot...  118075.152  117699.960   \nlongitude + latitude + housing_median_age + tot...  118075.152  117699.960   \nlongitude + latitude + housing_median_age + tot...  118075.152  117699.960   \nlongitude + latitude + housing_median_age + tot...  118075.152  117699.960   \n\n                                                     RMSE_Test  \nlongitude                                           120505.370  \nlongitude + latitude                                120435.215  \nlongitude + latitude + housing_median_age           120667.953  \nlongitude + latitude + housing_median_age + tot...  120700.695  \nlongitude + latitude + housing_median_age + tot...  120700.786  \nlongitude + latitude + housing_median_age + tot...  120700.778  \nlongitude + latitude + housing_median_age + tot...  120700.778  \nlongitude + latitude + housing_median_age + tot...  120700.778  \nlongitude + latitude + housing_median_age + tot...  120700.778  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>RMSE_Train</th>\n      <th>RMSE_Dev</th>\n      <th>RMSE_Test</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>longitude</td>\n      <td>117877.183</td>\n      <td>117493.850</td>\n      <td>120505.370</td>\n    </tr>\n    <tr>\n      <td>longitude + latitude</td>\n      <td>117807.608</td>\n      <td>117425.087</td>\n      <td>120435.215</td>\n    </tr>\n    <tr>\n      <td>longitude + latitude + housing_median_age</td>\n      <td>118043.892</td>\n      <td>117669.980</td>\n      <td>120667.953</td>\n    </tr>\n    <tr>\n      <td>longitude + latitude + housing_median_age + total_rooms</td>\n      <td>118075.070</td>\n      <td>117699.874</td>\n      <td>120700.695</td>\n    </tr>\n    <tr>\n      <td>longitude + latitude + housing_median_age + total_rooms + total_bedrooms</td>\n      <td>118075.160</td>\n      <td>117699.967</td>\n      <td>120700.786</td>\n    </tr>\n    <tr>\n      <td>longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population</td>\n      <td>118075.152</td>\n      <td>117699.960</td>\n      <td>120700.778</td>\n    </tr>\n    <tr>\n      <td>longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population + households</td>\n      <td>118075.152</td>\n      <td>117699.960</td>\n      <td>120700.778</td>\n    </tr>\n    <tr>\n      <td>longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population + households + median_income</td>\n      <td>118075.152</td>\n      <td>117699.960</td>\n      <td>120700.778</td>\n    </tr>\n    <tr>\n      <td>longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population + households + median_income + ocean_proximity</td>\n      <td>118075.152</td>\n      <td>117699.960</td>\n      <td>120700.778</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "df_result = pd.DataFrame(data = {'RMSE_Train': [rmse_train_1, rmse_train_2, rmse_train_3, rmse_train_4, rmse_train_5, rmse_train_6, rmse_train_7, rmse_train_8, rmse_train_9],\n",
+    "                                 'RMSE_Dev': [rmse_dev_1, rmse_dev_2, rmse_dev_3, rmse_dev_4, rmse_dev_5, rmse_dev_6, rmse_dev_7, rmse_dev_8, rmse_dev_9],\n",
+    "                                 'RMSE_Test': [rmse_test_1, rmse_test_2, rmse_test_3, rmse_test_4, rmse_test_5, rmse_test_6, rmse_test_7, rmse_test_8, rmse_test_9]},\n",
+    "                         index = ['longitude', 'longitude + latitude', 'longitude + latitude + housing_median_age', 'longitude + latitude + housing_median_age + total_rooms', 'longitude + latitude + housing_median_age + total_rooms + total_bedrooms', 'longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population','longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population + households', 'longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population + households + median_income','longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population + households + median_income + ocean_proximity' ])\n",
+    "display(df_result.round(3))"
    ]
   },
   {
