update nhan xet cho file BTTH_Tuan3

--- a/Week3/Quang/BTTH_Tuan3.ipynb
+++ b/Week3/Quang/BTTH_Tuan3.ipynb
@@ -853,7 +853,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# đối với OLS khi ta thêm càng nhiều thuộc tính vào thì RMSE càng giảm => các thuộc tính đều ảnh hưởng đến kết quả median_hous_value\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1027,6 +1029,13 @@
     "                                 'RMSE_Test': [rmse_test_1, rmse_test_2, rmse_test_3, rmse_test_4, rmse_test_5, rmse_test_6, rmse_test_7, rmse_test_8, rmse_test_9]},\n",
     "                         index = ['longitude', 'longitude + latitude', 'longitude + latitude + housing_median_age', 'longitude + latitude + housing_median_age + total_rooms', 'longitude + latitude + housing_median_age + total_rooms + total_bedrooms', 'longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population','longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population + households', 'longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population + households + median_income','longitude + latitude + housing_median_age + total_rooms + total_bedrooms + population + households + median_income + ocean_proximity' ])\n",
     "display(df_result.round(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# đối với SVM ta thấy khi thêm thuộc tính mới vào thì RMSE tăng, vậy để sử dụng SVM ta cần phải xem xét phân tích dữ liệu, chọn những thuộc tính ảnh hưởng nhiều đến kết quả nhất để chạy thuật toán\n"
    ]
   },
   {
