--- a/LAB05/LAB05.ipynb
+++ b/LAB05/LAB05.ipynb
@@ -25,18 +25,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "import itertools\n",
+    "import numpy as np\n",
+    "from sklearn import preprocessing\n",
     "\n",
     "df = pd.read_csv('thyroid_sick.csv')\n",
     "X = df[[column_name for column_name in df.columns if column_name != 'classes']]\n",
     "y = df[['classes']]\n",
-    "\n",
+    "X = preprocessing.StandardScaler().fit(X).transform(X.astype(float))\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "classes\n0    2864\n1     288\ndtype: int64"
+     },
+     "metadata": {},
+     "execution_count": 2
+    }
+   ],
+   "source": [
+    "df.pivot_table(index =['classes'], aggfunc='size')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Nhận xét:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": [
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend",
+     "outputPrepend"
+    ]
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Result with C = 0.5\n              precision    recall  f1-score   support\n\n           0       0.91      0.99      0.95       274\n           1       0.88      0.33      0.48        42\n\n    accuracy                           0.91       316\n   macro avg       0.89      0.66      0.72       316\nweighted avg       0.90      0.91      0.89       316\n\nResult with C = 1.0\n              precision    recall  f1-score   support\n\n           0       0.94      0.99      0.97       274\n           1       0.93      0.62      0.74        42\n\n    accuracy                           0.94       316\n   macro avg       0.94      0.81      0.86       316\nweighted avg       0.94      0.94      0.94       316\n\nResult with C = 1.5\n              precision    recall  f1-score   support\n\n           0       0.94      0.99      0.97       274\n           1       0.93      0.62      0.74        42\n\n    accuracy                           0.94       316\n   macro avg       0.94      0.81      0.86       316\nweighted avg       0.94      0.94      0.94       316\n\nResult with C = 2.0\n              precision    recall  f1-score   support\n\n           0       0.95      0.99      0.97       274\n           1       0.90      0.64      0.75        42\n\n    accuracy                           0.94       316\n   macro avg       0.92      0.82      0.86       316\nweighted avg       0.94      0.94      0.94       316\n\nResult with C = 2.5\n              precision    recall  f1-score   support\n\n           0       0.95      0.99      0.97       274\n           1       0.90      0.64      0.75        42\n\n    accuracy                           0.94       316\n   macro avg       0.92      0.82      0.86       316\nweighted avg       0.94      0.94      0.94       316\n\nResult with C = 3.0\n              precision    recall  f1-score   support\n\n           0       0.95      0.99      0.97       274\n           1       0.91      0.69      0.78        42\n\n    accuracy                           0.95       316\n   macro avg       0.93      0.84      0.88       316\nweighted avg       0.95      0.95      0.95       316\n\nResult with C = 3.5\n              precision    recall  f1-score   support\n\n           0       0.96      0.99      0.97       274\n           1       0.91      0.74      0.82        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.86      0.90       316\nweighted avg       0.95      0.96      0.95       316\n\nResult with C = 4.0\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 4.5\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 5.0\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 5.5\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 6.0\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.81      0.86        42\n\n    accuracy                           0.97       316\n   macro avg       0.95      0.90      0.92       316\nweighted avg       0.96      0.97      0.96       316\n\nResult with C = 6.5\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 7.0\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 7.5\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 8.0\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 8.5\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 9.0\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 9.5\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nResult with C = 10.0\n              precision    recall  f1-score   support\n\n           0       0.97      0.99      0.98       274\n           1       0.92      0.79      0.85        42\n\n    accuracy                           0.96       316\n   macro avg       0.94      0.89      0.91       316\nweighted avg       0.96      0.96      0.96       316\n\nThe best accuracy was with 0.9651898734177216 with C= 10.0\n"
+    }
+   ],
+   "source": [
+    "from sklearn import svm\n",
+    "C_parameter = 10.5\n",
+    "mean_acc = []\n",
+    "for n in np.arange(0.5, C_parameter, 0.5):\n",
+    "    \n",
+    "    #Train Model and Predict  \n",
+    "    clf = svm.SVC(C=n).fit(X_train,y_train)\n",
+    "    yhat=clf.predict(X_test)\n",
+    "    cnf_matrix = confusion_matrix(y_test, yhat)\n",
+    "\n",
+    "    mean_acc.append(float(accuracy_score(y_test, yhat)))\n",
+    "    print(\"Result with C = \" + str(n))\n",
+    "    np.set_printoptions(precision=2)\n",
+    "    print (classification_report(y_test, yhat))\n",
+    "\n",
+    "print( \"The best accuracy was with\", max(mean_acc), \"with C=\", n)\n"
    ]
   },
   {
@@ -107,6 +185,7 @@
     "from sklearn.datasets import fetch_california_housing\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "\n",
     "housing = fetch_california_housing()\n",
     "X = housing[\"data\"]\n",
     "y = housing[\"target\"]\n",
@@ -131,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
