--- a/LAB05/LAB05.ipynb
+++ b/LAB05/LAB05.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
       "text/plain": "classes\n0    2864\n1     288\ndtype: int64"
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 3
     }
    ],
    "source": [
@@ -72,25 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "tags": [
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend"
-    ]
-   },
+   "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
@@ -114,7 +96,7 @@
     "    np.set_printoptions(precision=2)\n",
     "    print (classification_report(y_test, yhat))\n",
     "\n",
-    "print( \"The best accuracy was with\", max(mean_acc), \"with C=\", n)\n"
+    "print( \"The best accuracy was with\", max(mean_acc), \"with C=\", n)"
    ]
   },
   {
@@ -196,9 +178,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37464bitbasecondad1102e76980a44e5b3ed33ed9ce0fd79"
   },
   "language_info": {
    "codemirror_mode": {
@@ -210,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
