--- a/LAB05/LAB05.ipynb
+++ b/LAB05/LAB05.ipynb
@@ -106,7 +106,8 @@
     " - <ins>Yêu cầu</ins>: Ý tưởng của hàm ``kernel`` $K(\\dots, \\dots)$ là gì? Khi nào chúng ta áp dụng hàm ``kernel``? Chúng ta có cần biết biểu thức của hàm $\\Phi(x)$ không?\n",
     " 1. Kernel SVM là việc đi tìm một hàm số biến đổi dữ liệu $x$ từ không gian feature ban đầu thành dữ liệu trong một không gian mới bằng hàm số $\\Phi(\\mathbf{x})$. Hàm số này cần thoả mãn mục đích đó là tronng không gian mới, dữ liệu giữa hai classes là phân biệt tuyến tính hoặc gần như phần biệt tuyến tính.\n",
     " 2. Chúng ta áp dụng hàm ``kernel`` khi dữ liệu không phân biệt tuyến tính, Với dữ liệu gần phân biệt tuyến tính, linear và poly kernels cho kết quả tốt hơn.\n",
-    " 3. Ta cần phải biết biểu thức của hàng $\\Phi(x)$ vì với mỗi bộ dữ liệu sẽ có những hàm kernels khác nhau từ đó chúng ta sẽ phải chọn những hàm $\\Phi(x)$ tương ứng"
+    " 3. Ta cần phải biết biểu thức của hàm $\\Phi(x)$ vì với mỗi bộ dữ liệu sẽ có những hàm kernels khác nhau từ đó chúng ta sẽ phải chọn những hàm $\\Phi(x)$ tương ứng.\n",
+    " "
    ]
   },
   {
