#9 Add answer for Ex5

--- a/LAB05/LAB05.ipynb
+++ b/LAB05/LAB05.ipynb
@@ -406,7 +406,9 @@
       },
       "source": [
         "### Bài tập 5.\n",
-        " - <ins>Yêu cầu</ins>: Giả sử bạn dùng bộ phân loại ``SVM`` với hàm ``kernel`` (radial basis function) ``RBF`` cho tập huấn luyện và thấy mô hình phân loại chưa tốt. Để cải thiện, bạn sẽ giảm hay tăng tham số $\\gamma$ trong công thức hàm ``kernel``, tham số ``C`` trong hàm mất mát."
+        " - <ins>Yêu cầu</ins>: Giả sử bạn dùng bộ phân loại ``SVM`` với hàm ``kernel`` (radial basis function) ``RBF`` cho tập huấn luyện và thấy mô hình phân loại chưa tốt. Để cải thiện, bạn sẽ giảm hay tăng tham số $\\gamma$ trong công thức hàm ``kernel``, tham số ``C`` trong hàm mất mát.\n",
+        " #### Câu trả lời:\n",
+        " Đối với tham số `gamma`, kernel sẽ cố gắng fit dataset nhưng đối với tham số `C` thì ta lại \"phạt\" (Penalty). Vì thế ta cần phải tìm điểm cân bằng giữa tham số C và gamma cùng một lúc bằng cách tăng hoặc là giảm để tìm ra được giá trị tốt nhất giúp mô hình hoạt động tốt hơn.\n"
       ]
     },
     {
@@ -823,7 +825,7 @@
         "lin_svr = LinearSVR(random_state = 42)\n",
         "lin_svr.fit(X_train_scaled, y_train)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -868,7 +870,7 @@
         "mse = mean_squared_error(y_train, y_pred)\n",
         "mse"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -889,18 +891,18 @@
       "metadata": {
         "id": "qH5kKpKTx-Vq",
         "colab_type": "code",
+        "outputId": "b2d0dda4-87ff-4d0c-b77e-c6f3ad88c977",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "b2d0dda4-87ff-4d0c-b77e-c6f3ad88c977"
+        }
       },
       "source": [
         "# %%\n",
         "import numpy as np\n",
         "np.sqrt(mse)"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -921,11 +923,11 @@
       "metadata": {
         "id": "6Z1yjz8zx_-h",
         "colab_type": "code",
+        "outputId": "0a9d34c7-a2ac-4723-b332-816bd51b4b7e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "0a9d34c7-a2ac-4723-b332-816bd51b4b7e"
+        }
       },
       "source": [
         "# %%\n",
@@ -936,7 +938,7 @@
         "rnd_search_cv = RandomizedSearchCV(SVR(), param_distributions, n_iter=10, verbose=2, cv=3, random_state=42)\n",
         "rnd_search_cv.fit(X_train_scaled, y_train)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1066,17 +1068,17 @@
       "metadata": {
         "id": "cjs8aXL3yDKw",
         "colab_type": "code",
+        "outputId": "1e88fa87-482a-4bc8-83e8-a35401186aed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        },
-        "outputId": "1e88fa87-482a-4bc8-83e8-a35401186aed"
+        }
       },
       "source": [
         "# %%\n",
         "rnd_search_cv.best_estimator_ \n"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1099,11 +1101,11 @@
       "metadata": {
         "id": "AzUFzxFhyExh",
         "colab_type": "code",
+        "outputId": "e84afa12-6934-4d45-dfae-cc4ab23427c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "e84afa12-6934-4d45-dfae-cc4ab23427c9"
+        }
       },
       "source": [
         "# %%\n",
@@ -1111,7 +1113,7 @@
         "mse = mean_squared_error(y_train, y_pred)\n",
         "np.sqrt(mse)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1132,18 +1134,18 @@
       "metadata": {
         "id": "zGjyjjibyIXh",
         "colab_type": "code",
+        "outputId": "4cabd396-095f-4785-83cd-e18f9bd1c1c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "4cabd396-095f-4785-83cd-e18f9bd1c1c7"
+        }
       },
       "source": [
         "y_pred = rnd_search_cv.best_estimator_.predict(X_test_scaled)\n",
         "mse = mean_squared_error(y_test, y_pred)\n",
         "np.sqrt(mse)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
