#8 Change the idea of kernel

--- a/LAB05/LAB05.ipynb
+++ b/LAB05/LAB05.ipynb
@@ -86,7 +86,7 @@
         "X = preprocessing.StandardScaler().fit(X).transform(X.astype(float))\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,13 +94,13 @@
       "metadata": {
         "id": "BUo_bGbHo-4p",
         "colab_type": "code",
-        "outputId": "ef9ba5c1-4b51-4f33-8654-7e9d58c66eb6",
-        "colab": {}
+        "colab": {},
+        "outputId": "ef9ba5c1-4b51-4f33-8654-7e9d58c66eb6"
       },
       "source": [
         "df.pivot_table(index =['classes'], aggfunc='size')"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -134,8 +134,8 @@
       "metadata": {
         "id": "NjYzfV_To-4z",
         "colab_type": "code",
-        "outputId": "1176ba14-2ca1-49d6-dd41-ea447a42ea0b",
-        "colab": {}
+        "colab": {},
+        "outputId": "1176ba14-2ca1-49d6-dd41-ea447a42ea0b"
       },
       "source": [
         "from sklearn import svm\n",
@@ -155,7 +155,7 @@
         "\n",
         "print( \"The best accuracy was with\", max(mean_acc), \"with C=\", n)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,7 @@
       "source": [
         "### Bài tập 3.\n",
         " - <ins>Yêu cầu</ins>: Ý tưởng của hàm ``kernel`` $K(\\dots, \\dots)$ là gì? Khi nào chúng ta áp dụng hàm ``kernel``? Chúng ta có cần biết biểu thức của hàm $\\Phi(x)$ không?\n",
-        " 1. Kernel SVM là việc đi tìm một hàm số biến đổi dữ liệu $x$ từ không gian feature ban đầu thành dữ liệu trong một không gian mới bằng hàm số $\\Phi(\\mathbf{x})$. Hàm số này cần thoả mãn mục đích đó là tronng không gian mới, dữ liệu giữa hai classes là phân biệt tuyến tính hoặc gần như phần biệt tuyến tính.\n",
+        " 1. Ý tưởng của kernel là thay vì ánh xạ một cách cụ thể từng phương trình hồi quy tuyến tính để tạo bộ phân lớp thì ở đây t có thể sử dụng kernel một cách cụ thể (Instead of explicit mapping for each class (multiple classifiers) with linear regression, we can use the kernel to do it)\n",
         " 2. Chúng ta áp dụng hàm ``kernel`` khi dữ liệu không phân biệt tuyến tính, Với dữ liệu gần phân biệt tuyến tính, linear và poly kernels cho kết quả tốt hơn.\n",
         " 3. Ta cần phải biết biểu thức của hàm $\\Phi(x)$ vì với mỗi bộ dữ liệu sẽ có những hàm kernels khác nhau từ đó chúng ta sẽ phải chọn những hàm $\\Phi(x)$ tương ứng.\n",
         " "
@@ -443,7 +443,7 @@
         "X_test = X[60000:]\n",
         "y_test = y[60000:]"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,11 +451,11 @@
       "metadata": {
         "id": "VTOMA2ZIpMBn",
         "colab_type": "code",
-        "outputId": "af07be81-e1f0-45a0-ee19-3a43c9481fab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
-        }
+        },
+        "outputId": "af07be81-e1f0-45a0-ee19-3a43c9481fab"
       },
       "source": [
         "# %%\n",
@@ -466,7 +466,7 @@
         "y_pred = lin_clf.predict(X_train)\n",
         "accuracy_score(y_train, y_pred)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -495,18 +495,18 @@
       "metadata": {
         "id": "N4me3Hf-pM6g",
         "colab_type": "code",
-        "outputId": "b12261e2-2c76-444a-aa34-a55d15b4b966",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "b12261e2-2c76-444a-aa34-a55d15b4b966"
       },
       "source": [
         "# %%\n",
         "y_test_predict =lin_clf.predict(X_test)\n",
         "accuracy_score(y_test, y_test_predict)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -535,7 +535,7 @@
         "X_train_scaled = Scaler.fit_transform(X_train.astype(np.float32))\n",
         "X_test_scaled = Scaler.fit_transform(X_test.astype(np.float32))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -543,11 +543,11 @@
       "metadata": {
         "id": "jFydqxtdpZXj",
         "colab_type": "code",
-        "outputId": "4ce5df91-ef77-4a0d-c3cd-c9098e1d14a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 88
-        }
+        },
+        "outputId": "4ce5df91-ef77-4a0d-c3cd-c9098e1d14a4"
       },
       "source": [
         "# %%\n",
@@ -556,7 +556,7 @@
         "y_pred = lin_clf.predict(X_train)\n",
         "accuracy_score(y_train, y_pred)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -597,7 +597,7 @@
         "from scipy.stats import reciprocal, uniform\n",
         "from sklearn.svm import SVC"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -605,11 +605,11 @@
       "metadata": {
         "id": "aaJ-HtuEpqfP",
         "colab_type": "code",
-        "outputId": "3f1077ec-4f0d-43bd-9506-2982a41077f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "3f1077ec-4f0d-43bd-9506-2982a41077f9"
       },
       "source": [
         "# %%\n",
@@ -623,7 +623,7 @@
         "rnd_search_cv.best_estimator_\n",
         "rnd_search_cv.best_score_"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +756,7 @@
         "y_pred = rnd_search_cv.best_estimator_.predict(X_test_scaled)\n",
         "accuracy_score(y_test, y_pred)\n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -787,7 +787,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +804,7 @@
         "X_train_scaled = Scaler.fit_transform(X_train)\n",
         "X_test_scaled = Scaler.fit_transform(X_test)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -812,11 +812,11 @@
       "metadata": {
         "id": "7C5LtEeox6Fp",
         "colab_type": "code",
-        "outputId": "5d8bac61-d87e-419e-8b88-c3e9ee4d6e5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 108
-        }
+        },
+        "outputId": "5d8bac61-d87e-419e-8b88-c3e9ee4d6e5c"
       },
       "source": [
         "# %%\n",
@@ -825,7 +825,7 @@
         "lin_svr = LinearSVR(random_state = 42)\n",
         "lin_svr.fit(X_train_scaled, y_train)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,11 +856,11 @@
       "metadata": {
         "id": "MjDzUcIHx7xi",
         "colab_type": "code",
-        "outputId": "07dc97fa-42bf-4c9e-db76-5240c6469acc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "07dc97fa-42bf-4c9e-db76-5240c6469acc"
       },
       "source": [
         "# %%\n",
@@ -870,7 +870,7 @@
         "mse = mean_squared_error(y_train, y_pred)\n",
         "mse"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,18 +891,18 @@
       "metadata": {
         "id": "qH5kKpKTx-Vq",
         "colab_type": "code",
-        "outputId": "b2d0dda4-87ff-4d0c-b77e-c6f3ad88c977",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "b2d0dda4-87ff-4d0c-b77e-c6f3ad88c977"
       },
       "source": [
         "# %%\n",
         "import numpy as np\n",
         "np.sqrt(mse)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -923,11 +923,11 @@
       "metadata": {
         "id": "6Z1yjz8zx_-h",
         "colab_type": "code",
-        "outputId": "0a9d34c7-a2ac-4723-b332-816bd51b4b7e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "0a9d34c7-a2ac-4723-b332-816bd51b4b7e"
       },
       "source": [
         "# %%\n",
@@ -938,7 +938,7 @@
         "rnd_search_cv = RandomizedSearchCV(SVR(), param_distributions, n_iter=10, verbose=2, cv=3, random_state=42)\n",
         "rnd_search_cv.fit(X_train_scaled, y_train)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1068,17 +1068,17 @@
       "metadata": {
         "id": "cjs8aXL3yDKw",
         "colab_type": "code",
-        "outputId": "1e88fa87-482a-4bc8-83e8-a35401186aed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 72
-        }
+        },
+        "outputId": "1e88fa87-482a-4bc8-83e8-a35401186aed"
       },
       "source": [
         "# %%\n",
         "rnd_search_cv.best_estimator_ \n"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1101,11 +1101,11 @@
       "metadata": {
         "id": "AzUFzxFhyExh",
         "colab_type": "code",
-        "outputId": "e84afa12-6934-4d45-dfae-cc4ab23427c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "e84afa12-6934-4d45-dfae-cc4ab23427c9"
       },
       "source": [
         "# %%\n",
@@ -1113,7 +1113,7 @@
         "mse = mean_squared_error(y_train, y_pred)\n",
         "np.sqrt(mse)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1134,18 +1134,18 @@
       "metadata": {
         "id": "zGjyjjibyIXh",
         "colab_type": "code",
-        "outputId": "4cabd396-095f-4785-83cd-e18f9bd1c1c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "4cabd396-095f-4785-83cd-e18f9bd1c1c7"
       },
       "source": [
         "y_pred = rnd_search_cv.best_estimator_.predict(X_test_scaled)\n",
         "mse = mean_squared_error(y_test, y_pred)\n",
         "np.sqrt(mse)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
