--- a/LAB05/LAB05.ipynb
+++ b/LAB05/LAB05.ipynb
@@ -126,7 +126,7 @@
         "colab_type": "text"
       },
       "source": [
-        "* Nhận xét:"
+        "* Nhận xét: Ta thấy dataset này khá tệ khi tỉ lệ giữa 0 và 1 chênh lệch quá nhiều"
       ]
     },
     {
@@ -364,6 +364,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YlnkMLKMkCCB",
+        "colab_type": "text"
+      },
+      "source": [
+        "* Nhận xét: Ta thấy khi càng tăng C thì accuracy sẽ càng tăng nhưng điều này khiến cho mô hình càng ngày càng bị overfit"
       ]
     },
     {
